feat: update pnpm workspace and TypeScript configuration
- Added `onlyBuiltDependencies` for `esbuild` and `workerd` in pnpm-workspace.yaml.
- Introduced a new _headers file for caching static assets in Cloudflare Workers.
- Updated TypeScript target to `es2024` and included additional type definitions.
- Created a new wrangler configuration file for the Cloudflare Worker with asset and durable object bindings.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "es2024",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -20,8 +20,15 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["./cloudflare-env.d.ts", "node"]
   },
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "build/types/**/*.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "build/types/**/*.ts",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
